--- a/index.html
+++ b/index.html
@@ -3,137 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Calculator</title>
+    <title>Document</title>
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-            margin: 0;
+        .column {
+           float: left;
+           width: 50%;
+           padding: 10px;
+           box-sizing: border-box;
+          
         }
-        #calculator {
-            background-color: #036080;
-            border-radius: 5px;
-            padding: 20px;
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-            width: 300px;
+        .row::after {
+           content: "";
+           clear: both;
+           display: table;
         }
-        #result {
-            grid-column: span 4;
-            height: 50px;
-            text-align: right;
-            padding: 10px;
-            background-color: white;
-            border: solid 2px #036080;
-            border-radius: 5px;
-            font-size: 1.5em;
-            margin-bottom: 10px; 
-        }
-        .button {
-            background-color: #036080;
-            border: solid 2px white;
-            border-radius: 5px;
-            font-size: 1.5em;
-            color: white;
-            padding: 10px 0;
-        }
-        .button:active {
-            background-color: #f0f0f0;
-        }
-        .operation, .clear {
-            background-color: #036080;
-            border: solid 2px white;
-            color: white; 
-        }
-        .equal {
-            grid-column: span 2;
-            background-color: #34a853;
-            height: 100%; 
-        }
-        .clear { grid-column: 4; }
-        .divide { grid-row: 2; grid-column: 4; }
-        .multiply { grid-row: 3; grid-column: 4; }
-        .subtract { grid-row: 4; grid-column: 4; }
-        .add { grid-row: 2; grid-column: 4; }
-        .equal { grid-row: 5 / 7; }
-        .equal { grid-column: unset; }
-    </style>
+     </style>
 </head>
 <body>
-    <div id="calculator">
-        <input type="text" id="result" disabled>
-        <button class="button">7</button>
-        <button class="button">8</button>
-        <button class="button">9</button>
-        <button class="button">1</button>
-        <button class="button">2</button>
-        <button class="button">3</button>
-        <button class="button">4</button>
-        <button class="button">5</button>
-        <button class="button">6</button>
-        <button class="button">0</button>
-        <button class="button">.</button>
-        <button class="button clear" onclick="clearResult()">C</button>
-        <button class="button operation divide">/</button>
-        <button class="button operation multiply">*</button>
-        <button class="button operation subtract">-</button>
-        <button class="button operation add">+</button>
-        <button class="button equal" onclick="calculate()">=</button>
-    </div>
+    <div class="row">
+        <div class="column">          
+           <section>
+            <h2>Arithmetic</h2>
+            <input id="operand1"/> 
+            <label>+</label>
+            <input id="operand2"/>
+            <button onclick="add()">=</button>
+            <label id="sum"></label>  
+        </section>
+        </div>
+        <div class="column">
+            <section>
+                <h2>Prime check</h2>                
+                <label>Number to test:</label>
+                <input id="numberToTest"/>
+                <button onclick="isPrime()">Check</button>
+                <label id="primeCheckResult"></label>  
+            </section>           
+        </div>       
+     </div>
     <script>
-        let result = document.getElementById("result");
-        function clearResult() {
-            result.value = "";
+        async function add() {
+            const operand1Input = document.getElementById("operand1");
+            const operand2Input = document.getElementById("operand2");
+            let n = operand1Input.value;
+            let m = operand2Input.value;
+            const response = await fetch("https://arithmetic-service.onrender.com/add/" + n + "/" + m);
+            const sum = await response.json();
+            document.getElementById("sum").innerText = sum;
         }
-        document.querySelectorAll('#calculator .button').forEach(button => {
-            button.addEventListener('click', function() {
-                if (!this.classList.contains('operation') && !this.classList.contains('equal') && !this.classList.contains('clear')) {
-                    result.value += this.innerText;
-                }
-            });
-        });
-    function calculate() {
-    const operationMap = {
-        '+': 'add',
-        '-': 'subtract',
-        '*': 'multiply',
-        '/': 'divide',
-    };
-    const trimmedInput = result.value.trim();
-    const match = trimmedInput.match(/(-?\d+(\.\d+)?)\s*([+\-*/])\s*(-?\d+(\.\d+)?)/);
-    if (match) {
-        const [, n, , operator, m] = match;
-        const operation = operationMap[operator.trim()];
-        fetch(`https://arithmetic-service-1sj0.onrender.com/${operation}/${n}/${m}`)
-        .then(response => {
-        if (!response.ok) {
-            throw new Error('Network response was not ok');
+        async function isPrime() {
+            const numberToTest = document.getElementById("numberToTest");            
+            let n = numberToTest.value;            
+            const response = await fetch("https://primes-serviceatsha256.onrender.com" + n);
+            const result = await response.json();
+            document.getElementById("primeCheckResult").innerText = result;
         }
-        return response.json();
-    })
-    .then(data => {
-        console.log(data); 
-        result.value = data.calculationResult ? data.calculationResult : "Invalid response format";
-    })
-            .catch(error => {
-                console.error('Error:', error);
-                result.value = "Error";
-            });
-    } else {
-        result.value = " ";
-    }
-}   
-        document.querySelectorAll('.operation').forEach(button => {
-            button.addEventListener('click', function() {
-                if (result.value !== "" && !isNaN(result.value.slice(-1))) {
-                    result.value += ` ${this.innerText} `;
-                }
-            });
-        });
     </script>
 </body>
 </html>
