--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         async function isPrime() {
             const numberToTest = document.getElementById("numberToTest");            
             let n = numberToTest.value;            
-            const response = await fetch("https://primes-serviceatsha256.onrender.com" + n);
+            const response = await fetch("https://primes-serviceatsha256.onrender.com/primes" + n);
             const result = await response.json();
             document.getElementById("primeCheckResult").innerText = result;
         }
