--- a/index.html
+++ b/index.html
@@ -7,29 +7,28 @@
     <style>
         .column {
            float: left;
-           width: 50%;
+           width: 33.33%;
            padding: 10px;
            box-sizing: border-box;
-          
         }
         .row::after {
            content: "";
            clear: both;
            display: table;
         }
-     </style>
+    </style>
 </head>
 <body>
     <div class="row">
         <div class="column">          
-           <section>
-            <h2>Arithmetic</h2>
-            <input id="operand1"/> 
-            <label>+</label>
-            <input id="operand2"/>
-            <button onclick="add()">=</button>
-            <label id="sum"></label>  
-        </section>
+            <section>
+                <h2>Arithmetic</h2>
+                <input id="operand1"/> 
+                <label>+</label>
+                <input id="operand2"/>
+                <button onclick="add()">=</button>
+                <label id="sum"></label>  
+            </section>
         </div>
         <div class="column">
             <section>
@@ -38,9 +37,18 @@
                 <input id="numberToTest"/>
                 <button onclick="isPrime()">Check</button>
                 <label id="primeCheckResult"></label>  
-            </section>           
-        </div>       
-     </div>
+            </section>
+        </div>
+        <div class="column">
+            <section>
+                <h2>Caesar Cipher</h2>
+                <label>Text:</label>
+                <input id="textToEncode"/>
+                <button onclick="encodeCaesar()">Cipher</button>
+                <label id="encodedText"></label>
+            </section>
+        </div>
+    </div>
     <script>
         async function add() {
             const operand1Input = document.getElementById("operand1");
@@ -57,6 +65,13 @@
             const response = await fetch("https://primes-serviceatsha256.onrender.com/primes/" + n);
             const result = await response.json();
             document.getElementById("primeCheckResult").innerText = result;
+        }
+        async function encodeCaesar() {
+            const textToEncodeInput = document.getElementById("Text");
+            let text = numebrToTest.value;
+            const response = await fetch ("https://ciphers-service-YOURUSERNAME.onrender.com/ciphers/" + plainText);
+            const result = await response. json;
+            document.getElementById ("cipher").innerText = result;
         }
     </script>
 </body>
