--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
             document.getElementById("primeCheckResult").innerText = result;
         }
         async function encodeCaesar() {
-            const textToEncodeInput = document.getElementById("Text");
-            let text = numebrToTest.value;
-            const response = await fetch ("https://ciphers-service-latest-59n6.onrender.com/ciphers/" + plainText);
-            const result = await response. json;
-            document.getElementById ("cipher").innerText = result;
-            
+            const textToEncodeInput = document.getElementById("textToEncode");
+            let text = textToEncodeInput.value;
+            // Adjusted URL to not include the shift value, assuming the server will handle it
+            const response = await fetch(`https://ciphers-service-latest-59n6.onrender.com/ciphers/caesar/${text}`);
+            const result = await response.json();
+            document.getElementById("encodedText").innerText = result;
         }
     </script>
 </body>
