--- a/index.html
+++ b/index.html
@@ -69,18 +69,17 @@
         async function encodeCaesar() {
         const textToEncodeInput = document.getElementById("textToEncode");
         let text = textToEncodeInput.value;
-        let defaultShift = 3; // Set your default shift value here
-        // Include the default shift value in the request
+        let defaultShift = 3; 
         const response = await fetch(`https://ciphers-service-latest-59n6.onrender.com/ciphers/caesar/${text}/${defaultShift}`);
         if (response.ok) {
             const result = await response.json();
-            document.getElementById("encodedText").innerText = result;
+            document.getElementById("encodedText").innerText = result.cipher;
         } else {
-            // Handle errors (e.g., display a message to the user)
             console.error("Failed to fetch", response.status, response.statusText);
             document.getElementById("encodedText").innerText = "Error: Could not encode text";
         }
-    }
+}
+
     </script>
 </body>
 </html>
