--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </style>
 </head>
 <body>
+    <div class ="row" id="login">
+    </div>
     <div class="row">
         <div class="column">          
             <section>
@@ -49,7 +51,10 @@
             </section>
         </div>
     </div>
+    <script src="configuration.js"></script>
     <script>
+        let hosts = configuration.hosts;
+        displayLogin();
         async function add() {
             const operand1Input = document.getElementById("operand1");
             const operand2Input = document.getElementById("operand2");
@@ -61,7 +66,9 @@
         }
         async function isPrime() {
             const numberToTest = document.getElementById("numberToTest");            
-            let n = numberToTest.value;            
+            let n = numberToTest.value; 
+            const header = {'Authorization':`Bearer ${configuration.token}`};
+            const response = await fetch(`${hosts.primes_servvice}/primes/${n}`,{headers});   
             const response = await fetch("https://primes-serviceatsha256.onrender.com/primes/" + n);
             const result = await response.json();
             document.getElementById("primeCheckResult").innerText = result;
